--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap');
+
 body {
+  display: flex;
+  flex-direction: column;
   margin: 0;
+
+
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(to left, #f7f7f7 , #ededed); 
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+header{
+  display: flex;
+  align-items: center;
+  
+  width: 100vw;
+  height: 9.5vh;
+
+  gap: 10px;
+  border-bottom: 0.5px solid #f3f3f3;
+
+  
+}
+
+
