costomização do loading

--- a/src/index.module.css
+++ b/src/index.module.css
@@ -117,3 +117,19 @@
     background-color: #fff;
 }
 
+
+.loading {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #808080;
+    width: 100vw;
+    height: 100vh;
+
+}
+
+.loading span {
+    margin-top: 5px;
+}
+
